Fix menu stickyness & card overflow when stretched

--- a/src/app/login/login.component.less
+++ b/src/app/login/login.component.less
@@ -35,3 +35,7 @@
         vertical-align: middle;
     }
 }
+
+.forgot-pass-link {
+    padding-bottom: 0;
+}
