--- a/src/app/menu/menu.component.less
+++ b/src/app/menu/menu.component.less
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+:host {
+  position: sticky;
+  top: 0;
+  z-index: 1020;
+}
 
 .spinner {
   margin: 0 auto 0;
